--- a/style.css
+++ b/style.css
@@ -153,7 +153,10 @@ body {
 
   margin: 2rem 1rem 3rem 1rem;
 }
-
+.title-desc {
+  font: 1.2rem sans-serif;
+  margin: 0 1.1rem;
+}
 .main {
   margin: auto;
 
